# yral-ml-feed-server

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.prod  fly-prod.toml  fly-staging.toml  fly.toml
.github/workflows/: build-check-staging.yml  build-check.yml  deploy-on-merge-to-main.yml  deploy-preview.yml  deploy-staging.yml
python_src/recommendation_service/: clean_recommendation_v4.py  combined_recommendation_v4.py  feed_rec_server.py  nsfw_recommendation_v4.py  ping_local_report_v3.py  report_video_v0.py  report_video_v3.py  video_recommendation.proto  video_recommendation_pb2.py  video_recommendation_pb2_grpc.py
python_src/recommendation_service/test/: ping_local_report_v3.py  ping_local_v3.py  ping_local_v4.py  ping_server.py  test_endpoints.py
python_src/utils/: config.py
rust_src/: app_state.rs  consts.rs  main.rs  ml_feed_impl.rs  utils.rs
rust_src/feed/: feed_v3.rs  mod.rs
rust_src/feed/utils/: coldstart_clean_cache_v3.rs  coldstart_nsfw_cache_v3.rs  global_cache_v3.rs  ml_feed.rs  ml_feed_v3.rs  mod.rs
rust_src/feed/v2/: mixed.rs  mod.rs
